unit testing done on the rps class

--- a/views/rps.ejs
+++ b/views/rps.ejs
@@ -2,8 +2,14 @@
 
 <h2 id='nameStored'><%= `Welcome ${name}. Click either Rock, Paper or Scissors to start the game.`%></h2>
 
-<form action="/game" method="POST">
+<form action="/rock" method="POST">
 <input type="submit" value="Rock" id="rockButton">
+</form>
+
+<form action="/paper" method="POST">
 <input type="submit" value="Paper" id="paperButton">
+</form>
+
+<form action="/scissors" method="POST">
 <input type="submit" value="Scissors" id="scissorsButton">
 </form>
