next feature test begin

--- a/views/rock.ejs
+++ b/views/rock.ejs
@@ -1,5 +1,6 @@
 <h1 id='rockSelected'>You have chosen Rock!</h1>
 
-
+<form action="/cpuTurn" method="POST">
+</form>
 
 <!-- <h2> <%= `${result}`%></h2> -->
