feature tests finished

--- a/views/scissors.ejs
+++ b/views/scissors.ejs
@@ -1,1 +1,5 @@
 <h1 id='scissorsSelected'>You have chosen Scissors!</h1>
+
+<form action="/cpuTurn" method="POST">
+<input type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
+</form>
