--- a/views/rock.ejs
+++ b/views/rock.ejs
@@ -1,6 +1,6 @@
 <h1 id='rockSelected'>You have chosen Rock!</h1>
 
 <form action="/cpuTurn" method="POST">
+<input type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
 </form>
 
-<!-- <h2> <%= `${result}`%></h2> -->
