--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,8 +1,12 @@
-<h1>Welcome to Rock, Paper, Scissors!</h1>
-<br>
-<h2>Please enter your name below:</h2>
+<link rel="stylesheet" href="styles.css">
 
-<form action="/name" method="POST">
+<h1 class='heading' >Welcome to Rock, Paper, Scissors!</h1>
+<hr>
+<br>
+
+<h2 class='enterName'>Please enter your name below:</h2>
+
+<form class='homeForm' action="/name" method="POST">
 
 <input type="text" name="userName" id="userName">
 <input type="submit" value="Submit" id="submitButton">
