--- a/views/paper.ejs
+++ b/views/paper.ejs
@@ -1,5 +1,9 @@
-<h1 id='paperSelected'>You have chosen Paper!</h1>
+<link rel="stylesheet" href="styles.css">
+<h1 class='subheading' >Rock, Paper, Scissors!</h1>
+<hr>
+<br>
+<h1 class='choiceMessage' id='paperSelected'>You have chosen Paper!</h1>
 
-<form action="/cpuTurn" method="POST">
-<input type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
+<form class ="centre" action="/cpuTurn" method="POST">
+<input class="choiceButton" type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
 </form>
