--- a/views/rock.ejs
+++ b/views/rock.ejs
@@ -1,6 +1,10 @@
-<h1 id='rockSelected'>You have chosen Rock!</h1>
+<link rel="stylesheet" href="styles.css">
+<h1 class='subheading' >Rock, Paper, Scissors!</h1>
+<hr>
+<br>
+<h1 class='choiceMessage' id='rockSelected'>You have chosen Rock!</h1>
 
-<form action="/cpuTurn" method="POST">
-<input type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
+<form class ="centre" action="/cpuTurn" method="POST">
+<input class="choiceButton" type="submit" value="Click to reveal which one the CPU picked" id='cpuButton'>
 </form>
 
